en vez de ir a buscar en el repositorio los hechos hago que el agregador busque en su lista dinamica de fuentes