@@ -3,7 +3,6 @@ package ar.utn.ba.ddsi.services.impl;
 import ar.utn.ba.ddsi.models.dtos.input.HechoInputDTO;
 import ar.utn.ba.ddsi.models.entities.Fuente;
 import ar.utn.ba.ddsi.models.entities.enumerados.TipoFuente;
-import ar.utn.ba.ddsi.models.entities.enumerados.TipoFuenteExterna;
 import ar.utn.ba.ddsi.models.repositories.IFuenteRepository;
 import ar.utn.ba.ddsi.services.IAgregadorService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,36 +12,38 @@ import java.util.stream.Collectors;
 
 @Service
 public class AgregadorService implements IAgregadorService {
+private List<Fuente> fuentes;
+private  IFuenteRepository fuenteRepository;
 
-  @Autowired
-  private IFuenteRepository fuenteRepository;
+public AgregadorService(List<Fuente> fuentes, IFuenteRepository fuenteRepository){
+  this.fuentes = fuentes;
+  this.fuenteRepository = fuenteRepository;
+}
 
   @Override
   public void agregarFuente(Fuente fuente){
-    fuenteRepository.save(fuente);
-  }
-
-  @Override
-  public List<Fuente> obtenerFuentesProxy() {
-    List<Fuente> fuentes = this.fuenteRepository.findAll();
-    return fuentes.stream().filter(f -> f.getTipo() == TipoFuente.PROXY).collect(Collectors.toList());
+    this.fuentes.add(fuente);
+  //fuenteRepository.save(fuente); ya no usamos el repositorio porque necesitamos la conexion dinamica con las fuentes,no sacar los hechos de un repo como veniamos haciendo
   }
 
   @Override
   public List<HechoInputDTO> obtenerHechosDeFuentes() {
-    List<Fuente> fuentes = this.fuenteRepository.findAll();
     return fuentes.stream().flatMap(f -> f.getHechos().stream()).collect(Collectors.toList());
   }
   @Override
   public List<HechoInputDTO> obtenerHechosPorTipoDeFuente(TipoFuente tipo) {
-    List<Fuente> fuentes = this.fuenteRepository.findAll();
     return fuentes.stream().filter(f -> f.getTipo() == tipo).flatMap(f -> f.getHechos().stream()).collect(Collectors.toList());
   }
 
   @Override
-  public List<HechoInputDTO> obtenerHechosPorFuenteExterna(TipoFuenteExterna tipo) {
+  public List<HechoInputDTO> obtenerHechosPorFuenteExterna(String tipo) {
     List<Fuente> fuentesProxy = this.obtenerFuentesProxy();
-    return fuentesProxy.stream().flatMap(f->f.getHechos().stream()).filter(h -> h.getFuenteExterna() == tipo).toList();
+    return fuentesProxy.stream().flatMap(f->f.getHechos().stream()).filter(h -> tipo.equalsIgnoreCase(h.getFuenteExterna())).collect(Collectors.toList());
+  }
+
+  @Override
+  public List<Fuente> obtenerFuentesProxy() {
+    return fuentes.stream().filter(f -> f.getTipo() == TipoFuente.PROXY).collect(Collectors.toList());
   }
 
 }
